# Evolutionary-Optimization

./: .buildinfo  .gitignore  README.md  README_PYPI.md  evolution.py  evolutionary_optimization.evolutionary_algorithm.html  evolutionary_optimization.fitness_functions.html  evolutionary_optimization.genotype.genotype_model.html  evolutionary_optimization.genotype.html  evolutionary_optimization.genotype.implemented_genotypes.html  evolutionary_optimization.html  evolutionary_optimization.phenotype.html  evolutionary_optimization.phenotype.implemented_phenotypes.html  evolutionary_optimization.phenotype.phenotype_model.html  fitness_functions.py  genindex.html  genotype.py  index.html  individual.py  main.py  modules.html  objects.inv  phenotype.py  population.py  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.circleci/: config.yml
_modules/: index.html
_modules/evolutionary_optimization/: evolution.html  main.html  population.html
_sources/: evolutionary_optimization.evolutionary_algorithm.rst.txt  evolutionary_optimization.fitness_functions.rst.txt  evolutionary_optimization.genotype.genotype_model.rst.txt  evolutionary_optimization.genotype.implemented_genotypes.rst.txt  evolutionary_optimization.genotype.rst.txt  evolutionary_optimization.phenotype.implemented_phenotypes.rst.txt  evolutionary_optimization.phenotype.phenotype_model.rst.txt  evolutionary_optimization.phenotype.rst.txt  evolutionary_optimization.rst.txt  index.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst  quickstart.rst
evolution/: evolution.py  individual.py  population.py
evolutionary_optimization/: evolution.py  main.py  population.py
evolutionary_optimization/genotype/: __init__.py  (+5 more)
fitness_functions/: abstract_fitness_function.py  fitness_interface.py  implemented_fitness_functions.py
fitness_score/: fitness_interface.py  fitness_score.py  implemented_fitness_functions.py
genotype/: abstract_genotype.py  binary_list_genotype.py  genotype.py  genotype_data_model.py  genotype_interface.py  integer_list_genotype.py
phenotype/: abstract_phenotype.py  inverted_parabola_phenotype.py  mse.py  parabola_phenotype.py  phenotype_interface.py  phenotypes_interface.py  test_phenotype.py
(+55 files in other folders)
