[tool.poetry]
name = "evolutionary-optimisation"
version = "2.0.0"
description = "A generic evolutionary algorithm for function optimisation."
authors = ["Marta <mswolinska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
abc = "main:run"
