[tool.poetry]
name = "evolutionary-optimisation"
version = "2.1.0"
description = "A generic evolutionary algorithm for function optimisation."
authors = ["Marta <mswolinska@gmail.com>"]
packages = [{ include = "evolutionary_optimization"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
myst-parser = "^0.18.0"
sphinx-copybutton = "^0.5.0"
sphinx-rtd-theme = "^1.0.0"
pylint = "^2.14.5"
Sphinx = "^5.1.1"
sphinx-autodoc-typehints = "^1.19.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_evolution = "main:run_evolutionary_alg"
