[tool.poetry]
name = "evolutionary-optimization"
version = "3.0.3"
description = "A generic evolutionary algorithm for function optimisation."
readme = "README_PYPI.md"
authors = ["Marta Wolinska <mswolinska@gmail.com>"]
documentation = "https://mwolinska.github.io/Evolutionary-Optimization/"
repository = "https://github.com/mwolinska/Evolutionary-Optimization"
packages = [
    { include = "evolutionary_optimization" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
myst-parser = "^0.18.0"
sphinx-copybutton = "^0.5.0"
sphinx-rtd-theme = "^1.0.0"
pylint = "^2.14.5"
Sphinx = "^5.1.1"
sphinx-autodoc-typehints = "^1.19.0"
sphinxcontrib-mermaid = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_evolution = "evolutionary_optimization.main:run_evolutionary_alg"
